# waterski_tracker

./: README.md  flake.nix  pyproject.toml
final/: read_data.py  ski_functions.py  tk.py
final/data/: 000car.csv  final_.csv
gui/: tk.py
maps/: copy_vids.sh  mockdata.csv  mockdata2.csv  ski_sensor.ipynb
maps/.ipynb_checkpoints/: ski_sensor-checkpoint.ipynb
